--- a/css/app.scss
+++ b/css/app.scss
@@ -1,3 +1,40 @@
+:root {
+  --dark-color: #19283f;
+  --green-color: #33d1cc;
+}
+
+.text-green {
+  color: var(--green-color);
+}
+.bg-green {
+  background-color: var(--green-color);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-color);
+  border-radius: 5px;
+}
 body {
   font-family: "Roboto", sans-serif;
+  height: 10000px;
+}
+.navbar {
+  background-color: var(--dark-color);
+  .nav-link {
+    color: white;
+    &.active,
+    &:hover,
+    &:focus {
+      color: var(--green-color);
+    }
+  }
+  .search {
+    border-left: 1px solid var(--green-color);
+  }
+  .navbar-toggler[aria-expanded="true"] {
+    border-color: var(--green-color) !important;
+  }
 }
