--- a/css/app.scss
+++ b/css/app.scss
@@ -130,3 +130,16 @@ body {
   }
 }
 /* End Our Work */
+/* Start Our Team */
+.our-team {
+  background-color: var(--section-color);
+  h2 {
+    color: var(--yellow-color);
+  }
+  .team {
+    h4 {
+      background-color: var(--green-color);
+    }
+  }
+}
+/* End Our Team */
