--- a/css/app.scss
+++ b/css/app.scss
@@ -144,7 +144,27 @@ body {
 }
 /* End Our Team */
 /* Start Project */
-.project{
+.project {
   background-color: var(--dark-color);
 }
 /* End Project */
+
+/* Start Subscribe */
+.subscribe {
+  background-color: var(--yellow-color);
+  input[type="text"] {
+    border: none;
+    border-bottom: 1px solid white;
+    &:focus {
+      outline: none;
+    }
+  }
+  ::placeholder {
+    color: white;
+  }
+  input[type="submit"] {
+    background-color: var(--dark-color);
+    color: var(--yellow-color);
+  }
+}
+/* End Subscribe */
