--- a/css/app.scss
+++ b/css/app.scss
@@ -22,7 +22,6 @@
 }
 body {
   font-family: "Roboto", sans-serif;
-  height: 10000px;
 }
 .main-btn {
   background-color: var(--red-color);
@@ -168,3 +167,34 @@ body {
   }
 }
 /* End Subscribe */
+/* Start Footer */
+footer {
+  background-color: var(--dark-color);
+  .copyright {
+    > span {
+      color: var(--green-color);
+    }
+    div > span {
+      color: var(--yellow-color);
+    }
+  }
+  .contact {
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+    .facebook {
+      background-color: #1877f2;
+    }
+    .twitter {
+      background-color: #1da1f2;
+    }
+    .linkedin {
+      background-color: #0077b5;
+    }
+    .youtube {
+      background-color: #ff0000;
+    }
+  }
+}
+/* End Footer */
